--- a/README
+++ b/README
@@ -5,6 +5,8 @@ Python module/library for retrieving WHOIS information of domains.
 
 By DDarko  http://ddarko.org/
 
+Updated for the Better URL Reputation Platform by Khalid Aziz
+
 
 Features
 =============
